# dbt-bigquery

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: docker-build-push.yml  gcp.yml
bigquery/: .user.yml  dbt_project.yml  profiles.yml
bigquery/models/dimension/: campaigns.sql
bigquery/models/source/: audience_master.sql  schema.yml
dbt_demo/: pyproject.toml
dbt_demo/bigquery/: .user.yml  dbt_project.yml  profiles.yml
pde-reporting/: pyproject.toml
pde-reporting/pde_reporting/: dbt_project.yml
