[tool.poetry]
name = "dbt-bigquery-test"
version = "0.1.0"
description = ""
authors = ["Shubham-Singh <ssingh38@woolworths.com.au>"]
readme = "README.md"
packages = [{include = "dbt_bigquery_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.1.0"
dbt-core = "^1.9.2"
google-cloud-bigquery = "^3.30.0"
dbt-bigquery = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
